<resources>
    <string name="app_name">RhythmTapper_Hit</string>
    <string name="main_btn_start">Game Start</string>
    <string name="main_btn_highscore">Highscore</string>
    <string name="main_btn_difficulty">Highscore</string>
    <string name="main_btn_about">About</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="diff_radio_easy">Normal</string>
    <string name="diff_radio_mid">Hard</string>
    <string name="diff_radio_hard">extreme</string>

    <string name="highscore_mode">Mode</string>
    <string name="highscore_score">Difficult</string>

    <string name="highscore_txt_easy">Normal</string>
    <string name="highscore_txt_mid">Hard</string>
    <string name="highscore_txt_hard">extreme</string>

    <string name="about_ball_normal_title">Normal</string>
    <string name="about_ball_bomb_title">TNT</string>
    <string name="about_ball_multiplier_title">Multiplier</string>
    <string name="about_ball_speeder_title">Speedy</string>
    <string name="about_ball_oneup_title">One up</string>
    <string name="about_ball_skull_title">skull</string>

    <string name="about_us">RhythmTapper - a game brought with love</string>
    <string name="about_title">Ball type</string>
    <string name="about_ball_normal_content">No special ability, no scoring.</string>
    <string name="about_ball_bomb_content">Destroy all incoming balls for a while and raise their scores to the point level.</string>
    <string name="about_ball_multiplier_content">double the multiplier</string>
    <string name="about_ball_speeder_content">Twice as fast as a normal ball.</string>
    <string name="about_ball_oneup_content">Life increases by one.</string>
    <string name="about_ball_skull_content">Decrease the number of lives to one</string>

</resources>
