<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dlHomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_background_color"
    tools:context="sma.rhythmtapper.DifficultySelectionActivity">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:background="@drawable/base_background_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:layout_width="320dp"
            android:layout_height="265dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:alpha="0.43"
            android:src="@mipmap/backgraound_copy" />

        <ImageView
            android:id="@+id/ivTopCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:scaleX="1.2"
            android:background="@drawable/home_top_circle" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/diff_radio_easy"
                android:layout_marginTop="50dp"
                android:layout_width="269dp"
                android:layout_height="55.5dp"
                android:id="@+id/diff_btn_easy"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/diffuser_button_background"
                android:layout_gravity="center_vertical|center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:text="@string/diff_radio_mid"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/sleep_sound_button_background"
                android:layout_width="269dp"
                android:layout_height="55.5dp"
                android:id="@+id/diff_btn_mid"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:text="@string/diff_radio_hard"
                android:layout_width="269dp"
                android:layout_height="55.5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/diffuser_button_background"
                android:id="@+id/diff_btn_hard"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHomeMenu"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/ivDrawerArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="25dp"
                android:background="@drawable/drawer_selector" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlAlarmTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:scaleX="1.2"
            android:alpha="0.4"
            android:background="@drawable/home_bottom_circle"/>

        <ImageView
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:scaleX="1.2"
            android:alpha="0.4"
            android:background="@drawable/home_bottom_circle_right"/>


        <ImageView
            android:layout_width="238.5dp"
            android:layout_height="56.5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="43.5dp"
            android:src="@drawable/back_star" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llDrawer"
        android:layout_width="190dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_background_color"
        android:orientation="vertical"
        android:paddingLeft="39dp">

        <LinearLayout
            android:id="@+id/llStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="71dp">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLullaby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSleepPattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDiffuserMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>


